--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -31,14 +31,12 @@
     position: absolute;
     width: 100vw;
     top: 100%;
-    height: 50vh;
+    height: 0vh;
     left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: translateY(-1000px);
     transition: all .5s ease-in-out;
-    z-index: 99;
     opacity: 0;
     color: $black;
 
@@ -46,8 +44,8 @@
         position: static;
         order: 1;
         transition: none;
-        transform: translateY(0);
         z-index: 0;
+        top: 100%;
         width: 60%;
         max-width: 1000px;
         height: 80%;
@@ -144,8 +142,9 @@
     }
 }
 
+
 .nav-active {
-    transform: translateX(0);
+    height: 50vh;
     opacity: 1;
     transition: all .5s ease-in-out;
 }
