--- a/styles/_productCard.scss
+++ b/styles/_productCard.scss
@@ -1,42 +1,3 @@
-@use "./utils/variables" as*;
-
-.products-header {
-    margin-top: 5rem;
-    width: 100%;
-    text-align: center;
-}
-
-.products {
-    margin-top: 3rem;
-    text-align: center;
-
-
-    @media screen and (min-width:$computer) {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        position: relative;
-    }
-
-}
-
-.products-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-flow: wrap;
-    margin-top: 2rem;
-    width: 100%;
-    gap: 3rem;
-
-
-    @media screen and (min-width:$laptop) {
-        justify-content: space-between;
-        width: 60%;
-        margin-top: 0;
-    }
-}
-
 .product-card {
     width: 40%;
     display: flex;
@@ -61,6 +22,14 @@
     border-radius: 10px
 }
 
+.category-name {
+    text-transform: capitalize;
+    font-size: xx-small;
+    font-weight: 500;
+    display: block;
+    color: $gray;
+}
+
 .product-button {
     width: 100px;
     height: 30px;
@@ -74,4 +43,9 @@
         cursor: pointer;
         box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
     }
+}
+
+.ingredients {
+    display: block;
+    font-size: x-small;
 }
