--- a/styles/_searchBar.scss
+++ b/styles/_searchBar.scss
@@ -1,12 +1,15 @@
+@use "../styles/utils/variables" as*;
+
 .search-bar {
     border-radius: 10px;
     padding: .6rem;
     border: none;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     display: flex;
     place-items: center;
     width: 75%;
     height: 40px;
+    position: relative;
+    background-color: #F5F5F5FF;
 }
 
 
@@ -14,5 +17,23 @@
     border: none;
     outline: none;
     height: 40px;
+    width: 100%;
+    background-color: #F5F5F5FF;
+
+}
+
+.filtered-products-wrapper {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    background-color: white;
+    @include container;
+    padding: 3rem .5rem;
+    border-radius: 10px;
+    position: absolute;
+    top: 80%;
+    z-index: 999;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 3rem;
 
 }
