--- a/styles/_cartBar.scss
+++ b/styles/_cartBar.scss
@@ -3,7 +3,7 @@
 .cart {
     @include flexStartColumn;
     background-color: $white;
-    height: 90%;
+    height: 95%;
     width: 100vw;
     max-width: 100vw;
     position: fixed;
@@ -24,7 +24,7 @@
         position: static;
         transform: translate(0, 0);
         width: 30%;
-        height: 500px;
+        height: 600px;
         z-index: 999;
         padding-bottom: 0;
     }
@@ -46,7 +46,9 @@
 
 
 .open-cart-btn {
-    background-color: $white;
+    background-color: $secColor;
+    font-size: medium;
+    font-weight: 700;
     position: fixed;
     bottom: 10px;
     left: 50%;
@@ -59,7 +61,6 @@
     place-items: center;
     color: $black;
     border: none;
-    box-shadow: rgba(100, 100, 111, 0.9) 0px 7px 29px 0px;
     cursor: pointer;
 
     @media screen and (min-width:$computer) {
@@ -86,7 +87,7 @@
     .icon {
         width: 100%;
         height: 100%;
-        color: black;
+        color: red;
     }
 
     @media screen and (min-width:$computer) {
@@ -135,8 +136,8 @@
 }
 
 .change-quantity-btn {
-    background-color: rgb(169, 169, 169);
-    color: $secColor;
+    background-color: $secColor;
+    color: $black;
     border: none;
     border-radius: 50%;
     width: 20px;
@@ -159,6 +160,10 @@
     width: 100%;
     height: 30px;
     padding-top: 1rem;
+
+    h2 {
+        margin-bottom: .5rem;
+    }
 }
 
 
