--- a/styles/_filter.scss
+++ b/styles/_filter.scss
@@ -1,11 +1,24 @@
 @use "./utils/variables" as*;
 
+
+.image-text-wrapper {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
 .category-wrapper {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
     gap: .5rem;
-    margin: 2rem 0;
+
+    @media screen and (min-width:$laptop) {
+        width: 60%;
+    }
+
 }
 
 .category {
