--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -8,6 +8,7 @@
     display: grid;
     place-items: center;
     margin-top: 5rem;
-    background-color: $secColor ;
+    background-color: $gray;
     overflow: hidden;
+    color: $white;
 }
