--- a/styles/index.css
+++ b/styles/index.css
@@ -212,7 +212,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   background-color: #fcfffc;
-  height: 90%;
+  height: 95%;
   width: 100vw;
   max-width: 100vw;
   position: fixed;
@@ -234,7 +234,7 @@
     position: static;
     transform: translate(0, 0);
     width: 30%;
-    height: 500px;
+    height: 600px;
     z-index: 999;
     padding-bottom: 0;
   }
@@ -253,7 +253,9 @@
 }
 
 .open-cart-btn {
-  background-color: #fcfffc;
+  background-color: #49D100;
+  font-size: medium;
+  font-weight: 700;
   position: fixed;
   bottom: 10px;
   left: 50%;
@@ -266,7 +268,6 @@
   place-items: center;
   color: #161818;
   border: none;
-  box-shadow: rgba(100, 100, 111, 0.9) 0px 7px 29px 0px;
   cursor: pointer;
 }
 @media screen and (min-width: 1439px) {
@@ -295,7 +296,7 @@
 .close-cart-btn .icon {
   width: 100%;
   height: 100%;
-  color: black;
+  color: red;
 }
 @media screen and (min-width: 1439px) {
   .close-cart-btn {
@@ -344,8 +345,8 @@
 }
 
 .change-quantity-btn {
-  background-color: rgb(169, 169, 169);
-  color: #ff3300;
+  background-color: #49D100;
+  color: #161818;
   border: none;
   border-radius: 50%;
   width: 20px;
@@ -366,6 +367,9 @@
   width: 100%;
   height: 30px;
   padding-top: 1rem;
+}
+.total-price h2 {
+  margin-bottom: 0.5rem;
 }
 
 .check-out-btn {
@@ -484,19 +488,32 @@
   display: grid;
   place-items: center;
   margin-top: 5rem;
-  background-color: #ff3300;
+  background-color: #2d3a3a;
   overflow: hidden;
+  color: #fcfffc;
 }
 
 /* Color */
 /* Font */
 /* Breakpoints */
+.image-text-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .category-wrapper {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   gap: 0.5rem;
-  margin: 2rem 0;
+}
+@media screen and (min-width: 1024px) {
+  .category-wrapper {
+    width: 60%;
+  }
 }
 
 .category {
@@ -515,7 +532,7 @@
 }
 
 .active-category {
-  background-color: #ff3300;
+  background-color: #49D100;
 }
 
 .home-page {
